fixed overflow-x in mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,9 @@ a {
     .hero-header {
         height: auto;
     }
+    body {
+        overflow-x: hidden;
+    }
 }
 
 .btn-outline-light {
